--- a/includes/header.html
+++ b/includes/header.html
@@ -25,8 +25,8 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="projectblackstar.js"></script>
-		<script type="text/javascript" src="formvalidate.js"></script>
+		<script type="text/javascript" src="js/projectblackstar.js"></script>
+		<script type="text/javascript" src="js/formvalidate.js"></script>
 		<!-- CSS Style Sheet -->
 		<!-- <link rel="stylesheet" href="css/base.css" type="text/css" media="screen" charset="utf-8"/> -->
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
