--- a/includes/iheader.html
+++ b/includes/iheader.html
@@ -25,7 +25,7 @@
 		<!-- External javascript call -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="indexjq.js"></script>
+		<script type="text/javascript" src="js/indexjq.js"></script>
 		
 		<!-- CSS Style Sheet -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
