--- a/includes/header.html
+++ b/includes/header.html
@@ -25,12 +25,12 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="js/projectblackstar.js"></script>
-		<script type="text/javascript" src="js/formvalidate.js"></script>
+		<script type="text/javascript" src="../js/projectblackstar.js"></script>
+		<script type="text/javascript" src="../js/formvalidate.js"></script>
 		<!-- CSS Style Sheet -->
 		<!-- <link rel="stylesheet" href="css/base.css" type="text/css" media="screen" charset="utf-8"/> -->
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<link rel="stylesheet" type="text/css" href="css/styles.css" />
+		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 	</head>
 	<body>
 		<div id="Header">
@@ -38,10 +38,10 @@
 		</div>
 		<div id="Menu" align="right">
 			<ul>
-			<li><a href="myteams-m.php">My Teams</a></li>
-			<li><a href="account.php">My Account</a></li>
+			<li><a href="../manager/myteams-m.php">My Teams</a></li>
+			<li><a href="../core/account.php">My Account</a></li>
 			<li><a href="">Help</a></li>
-			<li><a href="logout.php">Logout</a></li>	
+			<li><a href="../core/logout.php">Logout</a></li>	
 			</ul>
 		</div>
 	
