--- a/includes/header.html
+++ b/includes/header.html
@@ -27,6 +27,19 @@
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/projectblackstar.js"></script>
 		<script type="text/javascript" src="../js/formvalidate.js"></script>
+		<script type="text/javascript">
+			// Google analytics
+			var _gaq = _gaq || [];
+			_gaq.push(['_setAccount', 'UA-32669957-1']);
+			_gaq.push(['_trackPageview']);
+			
+			(function() {
+			  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			})();
+		
+		</script>
 		<!-- CSS Style Sheet -->
 		<!-- <link rel="stylesheet" href="css/base.css" type="text/css" media="screen" charset="utf-8"/> -->
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
