--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,7 +2,8 @@
 	
 		<div id="Footer">	
 			<ul>
-			<li><a href="../index.php">Home</a></li>
+			<li><a href="../fatbar.php">Home</a></li>	
+<!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
 			<li><a href="">Site Map</a></li>
 			<li><a href="">Privacy &amp; Security</a></li>
 			<li><a href="">Terms &amp; Conditions</a></li>
