header changes w/ myteam

--- a/includes/header.html
+++ b/includes/header.html
@@ -51,7 +51,7 @@
 		</div>
 		<div id="Menu" align="right">
 			<ul>
-			<li><a href="../manager/myteams-m.php">My Teams</a></li>
+			<li><a href="../manager/myteams.php">My Teams</a></li>
 			<li><a href="../core/account.php">My Account</a></li>
 			<li><a href="">Help</a></li>
 			<li><a href="../core/logout.php">Logout</a></li>	
