--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,7 @@ h1, h2, h3 {
 p
 {
 	color: #505050;
+	line-height: 150%;
 	font-size: 1em;
 	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 	margin-left: 100px;
