--- a/includes/f_header.html
+++ b/includes/f_header.html
@@ -16,24 +16,23 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<head>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+	xmlns:fb="https://www.facebook.com/2008/fbml">
+	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# playdigoro: http://ogp.me/ns/fb/playdigoro#">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title>OG Tutorial App</title>
 		<meta name="author" content="Frank" />
+  		<meta property="fb:app_id" content="413593075351071" /> 
+  		<meta property="og:type"   content="playdigoro:recipe" /> 
+  		<meta property="og:url"    content="http://www.digoro.com/player/player_home.php" /> 
+ 		<meta property="og:title"  content="Sample Recipe" /> 
+ 		<meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 
+
+
 		<!-- CSS Style Sheet -->
-		<!-- <link rel="stylesheet" href="css/base.css" type="text/css" media="screen" charset="utf-8"/> -->
-		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 
 		<!-- External javascript call -->
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" charset="utf-8"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js" charset="utf-8"></script>
-		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
-		<script type="text/javascript" src="../js/projectblackstar.js"></script>
-		<script type="text/javascript" src="../js/formvalidate.js"></script>
 		<script type="text/javascript">
-		
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-32896382-1']);
 		  _gaq.push(['_trackPageview']);
@@ -43,8 +42,24 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
-		
 		</script>
+		
+	  <script type="text/javascript">
+	  function postCook()
+	  {
+	      FB.api(
+	        '/me/playdigoro:cook',
+	        'post',
+	        { recipe: 'http://www.digoro.com/player/player_home.php' },
+	        function(response) {
+	           if (!response || response.error) {
+	              alert('Error occured');
+	           } else {
+	              alert('Cook was successful! Action ID: ' + response.id);
+	           }
+	        });
+	  }
+	  </script>	
 	</head>
 	<body>
 
