multiple facebook addition changes

--- a/includes/ifooter.html
+++ b/includes/ifooter.html
@@ -1,6 +1,10 @@
 <!-- ifooter.html. This page shows the HTML footer for the site. -->
 	
 		<div id="Footer">	
+			<ul>
+				<li><a href="">Privacy Policy</a></li>
+				<li><a href="">Terms of Service</a></li>
+			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
 		</div>
 	</body>
