--- a/includes/iheader.html
+++ b/includes/iheader.html
@@ -12,15 +12,24 @@
 	{
 		$page_title = 'digoro';
 	}
+	
 ?>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-	<head>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+	xmlns:fb="https://www.facebook.com/2008/fbml">
+	<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# playdigoro: http://ogp.me/ns/fb/playdigoro#">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title><?php echo $page_title; ?></title>
 		<meta name="author" content="Frank" />
+
+		<!-- Facebook data -->
+  		<meta property="fb:app_id" content="413593075351071" /> 
+  		<meta property="og:type"   content="playdigoro:recipe" /> 
+  		<meta property="og:url"    content="http://www.digoro.com/player/player_home.php" /> 
+ 		<meta property="og:title"  content="Sample Recipe" /> 
+ 		<meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 		
 
 		<!-- CSS Style Sheet -->
 		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
@@ -32,25 +41,7 @@
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/indexjq.js"></script>
 
-		<script type="text/javascript">
-<<<<<<< HEAD
-<<<<<<< HEAD
-		
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-32896382-1']);
-		  _gaq.push(['_trackPageview']);
-		
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		
-		</script>	
-=======
-=======
->>>>>>> facebook
-		
+		<script type="text/javascript">		
 		  var _gaq = _gaq || [];
 		  _gaq.push(['_setAccount', 'UA-32896382-1']);
 		  _gaq.push(['_trackPageview']);
@@ -62,13 +53,3 @@
 		  })();
 		
 		</script>		
-
-<<<<<<< HEAD
-=======
-
-	
->>>>>>> facebook
-
-	
-
->>>>>>> develop
