--- a/includes/footer.html
+++ b/includes/footer.html
@@ -5,7 +5,7 @@
 			<li><a href="../fatbar.php">Home</a></li>	
 <!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
 			<li><a href="">Site Map</a></li>
-			<li><a href="">Privacy &amp; Security</a></li>
+			<li><a href="">Privacy Policy</a></li>
 			<li><a href="">Terms &amp; Conditions</a></li>
 			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
