fixes with add player

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -5,8 +5,8 @@
 			<li><a href="../fatbar.php">Home</a></li>	
 <!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
 			<li><a href="">Site Map</a></li>
-			<li><a href="">Privacy Policy</a></li>
-			<li><a href="">Terms &amp; Conditions</a></li>
+			<li><a href="../privacy.html">Privacy Policy</a></li>
+			<li><a href="../terms.html">Terms &amp; Conditions</a></li>
 			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
 		</div>
