--- a/includes/ifooter.html
+++ b/includes/ifooter.html
@@ -2,8 +2,8 @@
 	
 		<div id="Footer">	
 			<ul>
-				<li><a href="">Privacy Policy</a></li>
-				<li><a href="">Terms of Service</a></li>
+				<li><a href="../privacy.html">Privacy Policy</a></li>
+				<li><a href="../terms.html">Terms of Service</a></li>
 			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
 		</div>
