hella facebook integration changes

--- a/includes/header.html
+++ b/includes/header.html
@@ -16,7 +16,8 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
+	xmlns:fb="https://www.facebook.com/2008/fbml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<title><?php echo $page_title; ?></title>
@@ -35,16 +36,16 @@
 		<script type="text/javascript" src="../js/formvalidate.js"></script>
 		<script type="text/javascript">
 		
-		  var _gaq = _gaq || [];
-		  _gaq.push(['_setAccount', 'UA-32896382-1']);
-		  _gaq.push(['_trackPageview']);
+		  	var _gaq = _gaq || [];
+		  	_gaq.push(['_setAccount', 'UA-32896382-1']);
+		  	_gaq.push(['_trackPageview']);
 		
-		  (function() {
-		    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		  })();
-		
+		  	(function() {
+		    	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		    	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		    	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		  	})();
+
 		</script>
 	</head>
 	<body>
@@ -56,9 +57,15 @@
 			<li><a href="../manager/myteams.php">My Teams</a></li>
 			<li><a href="../core/account.php">My Account</a></li>
 			<li><a href="">Help</a></li>
-			<li><a href="../core/logout.php">Logout</a></li>	
+			<li><a id="fb-logout" href="../core/logout.php">Logout</a></li>	
 			</ul>
 		</div>
-	
-	<!-- End of Header -->
+
+		<script type="text/javascript">
+			document.getElementById('fb-logout').onclick = function() {
+				FB.logout(function(response) {
+			    	Log.info('FB.logout callback', response);
+			  	});
+			};
+		</script>	
 
