--- a/includes/iheader.html
+++ b/includes/iheader.html
@@ -30,9 +30,6 @@
   		<meta property="og:url"    content="http://www.digoro.com/player/player_home.php" /> 
  		<meta property="og:title"  content="Sample Recipe" /> 
  		<meta property="og:image"  content="https://s-static.ak.fbcdn.net/images/devsite/attachment_blank.png" /> 		
-
-		<!-- CSS Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
 		
 		<!-- CSS Style Sheet -->
 		<link rel="stylesheet" type="text/css" href="../css/styles.css" />		
@@ -53,3 +50,5 @@
 		  })();
 		
 		</script>		
+	</head>
+	<body>
