--- a/includes/header.html
+++ b/includes/header.html
@@ -12,6 +12,14 @@
 	{
 		$page_title = 'digoro';
 	}
+
+	include '../includes/facebook.php';
+
+	$facebook = new Facebook(array(
+	  'appId'  => '413593075351071',
+	  'secret' => 'c91c70487679528d6d6b22547db88ea9',
+	));
+
 ?>
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" 
@@ -57,15 +65,6 @@
 			<li><a href="../manager/myteams.php">My Teams</a></li>
 			<li><a href="../core/account.php">My Account</a></li>
 			<li><a href="">Help</a></li>
-			<li><a id="fb-logout" href="../core/logout.php">Logout</a></li>	
+			<li><a href="../core/logout.php">Logout</a></li>	
 			</ul>
 		</div>
-
-		<script type="text/javascript">
-			document.getElementById('fb-logout').onclick = function() {
-				FB.logout(function(response) {
-			    	Log.info('FB.logout callback', response);
-			  	});
-			};
-		</script>	
-
