--- a/includes/header.html
+++ b/includes/header.html
@@ -60,7 +60,7 @@
 		<div id="Header">
 			<h1>digoro</h1>
 		</div>
-		<div id="Menu" align="right">
+		<div id="nav" align="right">
 			<ul>
 			<li><a href="../manager/myteams.php">My Teams</a></li>
 			<li><a href="../core/account.php">My Account</a></li>
