--- a/includes/header.html
+++ b/includes/header.html
@@ -57,14 +57,16 @@
 		</script>
 	</head>
 	<body>
-		<div id="Header">
+		<div id="banner">
 			<h1>digoro</h1>
 		</div>
-		<div id="nav" align="right">
-			<ul>
-			<li><a href="../manager/myteams.php">My Teams</a></li>
-			<li><a href="../core/account.php">My Account</a></li>
-			<li><a href="">Help</a></li>
-			<li><a href="../core/logout.php">Logout</a></li>	
-			</ul>
+		<div id="main">
+			<div id="nav" align="right">
+				<ul>
+				<li><a href="../manager/myteams.php">My Teams</a></li>
+				<li><a href="../core/account.php">My Account</a></li>
+				<li><a href="">Help</a></li>
+				<li><a href="../core/logout.php">Logout</a></li>	
+				</ul>
+			</div>
 		</div>
