removed includes line if user accessed page without submitting a form

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,6 +1,6 @@
 <!-- footer.html. This page shows the HTML footer for the site. -->
 	
-		<div id="Footer">	
+		<div id="footer">	
 			<ul>
 			<li><a href="../fatbar.php">Home</a></li>	
 <!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
