--- a/includes/ifooter.html
+++ b/includes/ifooter.html
@@ -1,6 +1,6 @@
 <!-- ifooter.html. This page shows the HTML footer for the site. -->
 	
-		<div id="Footer">	
+		<div id="footer">	
 			<ul>
 				<li><a href="../privacy.html">Privacy Policy</a></li>
 				<li><a href="../terms.html">Terms of Service</a></li>
