--- a/includes/header.html
+++ b/includes/header.html
@@ -57,10 +57,10 @@
 		</script>
 	</head>
 	<body>
+	<div id="wrapper">
 		<div id="banner">
 			<h1>digoro</h1>
-		</div>
-		<div id="main">
+
 			<div id="nav" align="right">
 				<ul>
 				<li><a href="../manager/myteams.php">My Teams</a></li>
