--- a/css/base.css
+++ b/css/base.css
@@ -1,98 +1,30 @@
-#navigation{
-	float: right;
-	width: 150px;
-}
-#intro{
-	width: 450px;
-}
+/*
+ * Base.css stylesheet 
+ * Digoro Inc.
+ * Last Revised 8/11/2012
+ * By Frank Oppong
+ */
 
-body {
-	font-family: "Lucida Sans Unicode","Lucida Grande",Sans-Serif;
-	color: #3E3E3E;
-	background: #94C5EB url(imgs/images/background-grad.png) repeat-x;
-	font-size: 12px;
-}
+/* bootstrap by twitter */
+@import url("bootstrap.css");
 
-p {
-	padding: 5px;
-}
+/* main - for all other elements */
+@import url("main.css");
 
-a {
-	color: #3687AF;
-}
+/* typography styles */
+@import url("typog.css");
 
-#container{
-	margin:0 auto;
-	text-align: left;
-	width: 650px;
-}
+/* form elements 
+@import url("form.css"); */
 
-#header{
-	height: 60px;
-	color: #172322;
-	background: transparent url(imgs/images/header-corners.png) no-repeat bottom left;
-}
+/* table elements */
+@import url("table.css");
 
-#header h1
-{
-	padding:0;
-	margin:0;
-}
+/* main layout */
+@import url("layout.css");
 
-#content{
-	background-color: #fff;
-	padding: 0 15px 10px 15px;
+/* navigation */
+@import url("nav.css");
 
-} 
-
-#footer{
-	background-color: #fff;
-	padding:15px;
-  clear: both;
-}
-
-h2 {
-	border-bottom:2px solid #015287;
-	color: #D15600;
-	padding-top: 10px;
-  margin-top: 0;
-}
-
-table {
-	border-collapse:collapse;
-	font-size:12px;
-	margin:0 20px 20px 20px;
-	border-top:2px solid #015287;
-	width:480px;
-}
-
-th {
-	border-bottom: 2px solid #015287;
-	color: #D15600;
-	font-size: 14px;
-	font-weight: normal;
-	text-align: left;
-	padding: 3px 8px;
-}
-
-td {
-	padding: 6px;
-}
-
-/* Style for form */
-form div {
-margin: 0 0 10px 160px;
-}
-
-
-form div label {
-	width: 140px;
-	float: left;
-	text-align: right;
-	margin: 5px 20px 0 -160px;
-}
-
-#spinner{
-	height: 100%;
-	background: transparent url(/ajax-loader.gif) no-repeat center center;
-}
+/* colour scheme */
+@import url("skin.css");
