--- a/includes/header.html
+++ b/includes/header.html
@@ -32,9 +32,9 @@
 		<meta name="author" content="Frank" />
 
 		<!-- CSS Style Sheet -->
-		<!-- <link rel="stylesheet" href="css/base.css" type="text/css" media="screen" charset="utf-8"/> -->
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<link rel="stylesheet" type="text/css" href="../css/styles.css" />
+		<!-- <link rel="stylesheet" type="text/css" href="../css/base.css" /> -->
+		<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
 
 		<!-- External javascript call -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" charset="utf-8"></script>
@@ -57,7 +57,7 @@
 		</script>
 	</head>
 	<body>
-	<div id="wrapper">
+
 		<div id="banner">
 			<h1>digoro</h1>
 
@@ -70,3 +70,9 @@
 				</ul>
 			</div>
 		</div>
+		
+		<div id="contentWrapper">
+				
+				<div id="iconbar">
+					<p>This is where the icons will go</p>
+				</div>			
