--- a/includes/footer.html
+++ b/includes/footer.html
@@ -10,6 +10,7 @@
 			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
 		</div>
+	</div> <!-- End of wrapper div -->
 	</body>
 </html>
 
