--- a/includes/ifooter.html
+++ b/includes/ifooter.html
@@ -7,5 +7,6 @@
 			</ul><br />
 			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
 		</div>
+	</div> <!-- End of wrapper div -->
 	</body>
 </html>
