--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
-/* Reset for Browser Styles*/
+/*********************/
+/* Main */
+/*********************/
+
+/* Reset for Browser Styles [Using bootstraps reset - look at normalize.css for better version]
 html, body, h1, h2, h3, h4, h5, h6, p, ol, ul, li, pre, code, address, var, form, fieldset, blockquote {
  padding: 0;
  margin: 0;
@@ -13,348 +17,3 @@ ul { padding-left: 1.4em; list-style:square; }
 q:before, q:after { content:''; }
 /* End of Reset */
 	
-
-
-/*********************/
-/* BANNER STYLES */
-/*********************/
-
-#banner {
-	border: 1px solid black;
-	background-color: #CCCCCC;
-	width: 100%;
-}
-
-#banner label {
-	vertical-align: middle;
-	font-weight: bold;
-}
-
-#banner input {
-	display: inline;
-	vertical-align: middle;
-	width: 100px;
-	border: 1px solid #000000;
-	background: #fff;
-}
-
-/*********************/
-/* SIDEBAR */
-/*********************/
-
-#sidebar {
-	float: left;
-	width: 170px;
-	margin-top: 10px;
-}
-
-#main {
-	margin-left: 180px;
-}
-
-
-html
-{
-	min-height:100%;
-	height:auto;
-}
-
-body
-{
-	background-color: #FDF8AB;
-	background-image: url(imgs/bg_page.png);
-	background-repeat: repeat-y;
-	background-position: center top;
-	padding: 0;
-	margin: 0 auto;
-	width: 760px;
-}
-
-h1, h3 {
-	color: #BD8100;
-	font-family: Baskerville, "Palatino Linotype", Times, serif;
-	border-top: 2px solid #86A100;
-	padding-top: 7px;
-	padding-left: 100px;
-}
-
-h2 {
-	font-size: 24px;
-	font-family: "Arial Narrow", Arial, Helvetica, sans-serif;
-	color: #F96B18;
-	border-top: 2px dotted #8DA516;
-	border-bottom: 2px dotted #8DA516;
-	padding-top: 5px;
-	padding-bottom: 5px;
-	margin: 15px 0 5px 0;
-}
-
-p
-{
-	color: #505050;
-	line-height: 150%;
-	font-size: 1em;
-	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-	margin-left: 100px;
-}
-
-p.tip {
-	font-size:9pt;
-}
-
-li
-{
-	display:inline;
-}
-
-input {
-	font-size: 12px;
-	border: solid 1px #aacfe4;
-	width: 200px;
-	margin: 3px;
-}
-
-#submit
-{
-	width:auto;
-	height: 20px;
-	text-align:center;
-	font-weight:bold;
-	background-color:#B0C4DE
-}
-
-.error { 
-	color:#FF0000;
-}
-
-.errorMessage { 
-	font-style: italic; 
-}
-
-
-/* Site Navigation Bar */
-
-#nav {
-	margin-left: 0px;
-	padding-left: 0px;
-	list-style: none;
-	border-bottom: 1px dashed #000;
-	overflow: hidden;
-	zoom: 1; /*for IE6 */
-}
-
-#nav ul li {
-	float: left;
-}
-
-#nav ul a {
-	width: 6em;
-	display: block;
-	border: 1px dashed #000;
-	border-bottom: 1px dashed #000;
-	border-bottom: none;
-	padding: 5px;
-	margin-right: 5px;
-	background-color: #EAEAEA;
-	text-decoration: none;
-	color: #333;
-	text-align: center;
-}
-
-/* Zebra style for roster tables */
-.zebra {
-	background-color: #EEEEEE;
-	color: #666666;
-}
-
-/* Zebra hover style for roster tables */
-tr.zebraHover {
-	background-color: #FFFACD;
-}
-
-/* Style for form */
-
-#AddPlayerForm {
-	font-size: .8em;
-}
-
-#AddPlayerForm .label {
-	float: left;
-	width: 230px;
-	margin-right: 10px;
-	text-align: right;
-	font-weight: bold;
-	clear: left;
-}
-
-#EditPlayerForm {
-	font-size: .8em;
-}
-
-#EditPlayerForm .label {
-	float: left;
-	width: 150px;
-	margin-right: 10px;
-	text-align: right;
-	font-weight: bold;
-	clear: left;
-}
-
-
-
-label {
-  display: block;
-}
-label.valid {
-  width: 24px;
-  background: url('imgs/valid.png') center center no-repeat;
-  display: inline-block;
-  text-indent: -9999px;
-}
-
-label.error {
-  padding-left: 5px;
-  display: inline-block;
-}
-
-input {
-  display: inline-block;
-}
-
-form div {
-  padding: 5px;
-  float: left;
-  clear: left;
-  width: 100%;
-}
-
-button {
-  margin-top: 10px;
-}
-
-
-/* Style for schedule table on view_sch.php */
-
-#schedule {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	width: 98%;
-	border-collapse: collapse;
-}
-
-#schedule caption {
-	text-align: right;
-	font-size: 1.0em;
-	padding-top: 25px;
-}
-
-#schedule td, #schedule th {
-	font-size: 1.0em;
-	border: 1px solid #DDB575;
-	padding: 3px 7px 2px 7px;
-}
-
-#schedule th {
-	text-transform: uppercase;
-	text-align: left;
-	padding-top: 5px;
-	padding-bottom: 4px;
-	background: url(imgs/bg_th.png) no-repeat left top;
-	color: #FFF;
-}
-
-
-/* Style for roster table on view_roster.php */
-
-#roster {
-	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-	width: 98%;
-	border-collapse: collapse;
-}
-
-#roster caption {
-	text-align: right;
-	font-size: 1.0em;
-	padding-top: 25px;
-}
-
-#roster td, #roster th {
-	font-size: 1.0em;
-	border: 1px solid #DDB575;
-	padding: 3px 7px 2px 7px;
-}
-
-#roster th {
-	text-transform: uppercase;
-	text-align: left;
-	padding-top: 5px;
-	padding-bottom: 4px;
-	background: url(imgs/bg_th.png) no-repeat left top;
-	color: #FFF;
-}
-
-/* Style for tables */
-		.table-wrapper {
-			width: 520px;
-		}
-
-		.wrapper-paging {
-			display: none;
-		}
-
-		.wrapper-paging ul,
-		.wrapper-paging li {
-			float: left;
-			margin: 0;
-			padding: 0;
-		}
-
-		.wrapper-paging ul {
-			float: left;
-			list-style-type: none;
-			text-align: left;
-		}
-
-		.wrapper-paging a {
-			border: 2px solid #FFFFFF;
-			border-radius: 3px;
-			-moz-border-radius: 3px;
-			-webkit-border-radius: 3px;
-			display: inline-block;
-			color: #015287;
-			cursor: pointer;
-			margin-right: 3px;
-			padding: 3px 7px;
-			text-decoration: none;
-		}
-
-		.wrapper-paging .paging-this {
-			cursor: default;
-			padding: 3px 0;
-		}
-
-		.wrapper-paging a:hover {
-			background-color: #015287;
-			color: #FFFFFF;
-		}
-
-		.wrapper-paging .paging-back,
-		.wrapper-paging .paging-next {
-			border-color: #015287;
-		}
-
-		.wrapper-paging .paging-this:hover {
-			background-color: #FFFFFF;
-			color: #015287;
-		}
-
-		.wrapper-paging .paging-this b {
-			font-weight: normal;
-		}
-		
-		.wrapper-paging .paging-disabled,
-		.wrapper-paging .paging-disabled:hover {
-			background-color: #FFFFFF;
-			border-color: gray;
-			color: gray;
-			cursor: default;
-		}
