--- a/includes/header.html
+++ b/includes/header.html
@@ -42,6 +42,7 @@
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/projectblackstar.js"></script>
 		<script type="text/javascript" src="../js/formvalidate.js"></script>
+		<script type="text/javascript" src="../js/bootstrap.js"></script>
 		<script type="text/javascript">
 		
 		  	var _gaq = _gaq || [];
@@ -57,6 +58,27 @@
 		</script>
 	</head>
 	<body>
+
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container-fluid">
+					<a class="brand" href="#"> digoro </a>
+
+					<div class="btn-group pull-right">
+          	<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+            	<i class="icon-user"></i> Username
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href="../core/account.php">My Account</a></li>
+              <li class="divider"></li>
+              <li><a href="../core/logout.php">Sign Out</a></li>
+            </ul>
+          </div>
+
+				</div> 
+			</div>
+		</div> <!-- End of Navbar div -->
 
 		<div id="banner">
 			<h1>digoro</h1>
