--- a/includes/header.html
+++ b/includes/header.html
@@ -61,7 +61,7 @@
 
 		<div class="navbar navbar-fixed-top">
 			<div class="navbar-inner">
-				<div class="container-fluid">
+				<div class="container">
 					<a class="brand" href="../fatbar.php"> digoro </a>
 
 					<div class="btn-group pull-right">
@@ -79,8 +79,8 @@
 			</div>
 		</div> <!-- End of Navbar div -->
 
-		<div class="container-fluid" id="contentWrapper">
-			<div class="row-fluid"> <!-- Row for all content except footer -->	
+		<div class="container" id="contentWrapper">
+			<div class="row"> <!-- Row for all content except footer -->	
 				<div class="span3">
 					<div class="well sidebar-nav">
 						<p>This is where the icons will go</p>						
