--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,17 +1,19 @@
 <!-- footer.html. This page shows the HTML footer for the site. -->
 	
-		<div id="footer">	
-			<ul>
-			<li><a href="../fatbar.php">Home</a></li>	
-<!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
-			<li><a href="">Site Map</a></li>
-			<li><a href="../privacy.html">Privacy Policy</a></li>
-			<li><a href="../terms.html">Terms &amp; Conditions</a></li>
-			</ul><br />
-			&copy; Copyright 2012 digoro.com - All Rights Reserved.		
-		</div>
-	</div> <!-- End of container -->
-	</body>
+		<div class="row"> <!-- Footer row -->
+			<div id="footer" class="span12">	
+				<ul>
+					<li><a href="../fatbar.php">Home</a></li>	
+		<!--		<li><a href="../index.php">Home</a></li> Fix when site goes live-->
+					<li><a href="">Site Map</a></li>
+					<li><a href="../privacy.html">Privacy Policy</a></li>
+					<li><a href="../terms.html">Terms &amp; Conditions</a></li>
+					</ul><br />
+					&copy; Copyright 2012 digoro.com - All Rights Reserved.		
+			</div>
+		</div> <!-- End of footer row -->
+	</div> <!-- End of contentWrapper -->
+</body>
 </html>
 
 <?php
