--- a/includes/header.html
+++ b/includes/header.html
@@ -35,6 +35,7 @@
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
 		<!-- <link rel="stylesheet" type="text/css" href="../css/base.css" /> -->
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
+		<link rel="stylesheet" type="text/css" href="../css/layout.css" />
 
 		<!-- External javascript call -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.js" charset="utf-8"></script>
@@ -78,11 +79,3 @@
 				</div> 
 			</div>
 		</div> <!-- End of Navbar div -->
-
-		<div class="container" id="contentWrapper">
-			<div class="row"> <!-- Row for all content except footer -->	
-				<div class="span3">
-					<div class="well sidebar-nav">
-						<p>This is where the icons will go</p>						
-					</div>
-				</div>			
