--- a/includes/iheader.html
+++ b/includes/iheader.html
@@ -34,10 +34,12 @@
 		<!-- CSS Style Sheet -->
 		<!-- <link rel="stylesheet" type="text/css" href="../css/base.css" /> -->
 		<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" />
+		<link rel="stylesheet" type="text/css" href="../css/layout.css" />
 			
 		<!-- External javascript call -->
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
+		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="../js/indexjq.js"></script>
 
 		<script type="text/javascript">
