--- a/includes/header.html
+++ b/includes/header.html
@@ -42,7 +42,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.js" charset="utf-8"></script>
 		<script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.9/jquery.validate.min.js" charset="utf-8"></script>
 		<script type="text/javascript" src="../js/projectblackstar.js"></script>
-		<script type="text/javascript" src="../js/formvalidate.js"></script>
+		<!-- <script type="text/javascript" src="../js/formvalidate.js"></script> -->
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 		
