--- a/css/layout.css
+++ b/css/layout.css
@@ -13,6 +13,15 @@ body
   
 }
 
+
+
+/* Upcoming Events List */
+ul.upcoming-events {
+	list-style-type: none;
+	padding-left: 0;
+	margin-left: 0;
+}
+
 /* FOOTER */
 
 #footer {
